<resources>
    <string name="app_name">Helpywork</string>
    <string name="start_display">HELPYWORK\nLA CLÉ DU SUCCES</string>
    <string name="welcome_display">BIENVENUE SUR HELPYWORK</string>
    <string name="name">NAME</string>
    <string name="login">Se connecter</string>
    <string name="password">Mot de passe</string>
    <string name="confirm">Confirmation MDP</string>
    <string name="noAccount">Pas encore de compte ?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="swipe_left_for_register">Swipe Left for Register</string>
    <string name="e_mail">Email</string>
    <string name="tag">L\'aide à proximité</string>
    <string name="swipe_right_for_login">Swipe Right for Login</string>
    <string name="register">S\'inscrire</string>
    <string name="re_type_password">Confirmation du mot de passe</string>
    <string name="your_name">Nom</string>
    <string name="ville">Votre ville</string>
    <string name="prenom">Prénom</string>
    <string name="suivant">Etape suivante</string>
    <string name="cp">Code postal</string>
    <string name="adresse">Adresse</string>

    <string-array name="matiere_array">
        <item>Mathématiques</item>
        <item>Français</item>
        <item>Anglais</item>
        <item>Italien</item>
        <item>Histoire</item>
        <item>Géographie</item>
        <item>SVT</item>
        <item>Physique</item>
        <item>Art</item>
        <item>Chimie</item>
        <item>Philosophie</item>
    </string-array>

    <string-array name="niveau_array">
        <item>6eme</item>
        <item>5eme</item>
        <item>4eme</item>
        <item>3eme</item>
        <item>2nd</item>
        <item>1ere</item>
        <item>Terminal</item>
    </string-array>

    <string name="queFaire">Que voulez-vous faire ?</string>
    <string name="demandes">Mes demandes d\'aide</string>
    <string name="contribs">Mes contributions</string>
    <string name="rechercheEnseignant">Recherchez votre enseignant</string>
    <string name="description">Description du niveau</string>
    <string name="chapitre">Titre du chapitre</string>
    <string name="ajoutProblem">Ajout d\'un problème</string>
    <string name="selectNiveau">Sélectionnez une tranche de niveau</string>
    <string name="selectMatiere">Sélectionnez la matière</string>
    <string name="problemTitle">Titre du problème</string>
    <string name="problemTitleHint">Veuillez entrer votre titre</string>
    <string name="problemDescription">Description du problème</string>
    <string name="problemDescriptionHint">Saisissez la description de votre problème</string>
    <string name="title_activity_botton_navigation">BottonNavigation</string>
    <string name="title_account">Compte</string>
    <string name="title_aides">Mes Aides</string>
    <string name="title_agir">Agir</string>
</resources>
