<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ajoutProblem"
                android:textAlignment="center"
                android:textColor="#FFF"
                android:textSize="30dp"
                android:fontFamily="casual"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_margin="20dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/problemTitle"
                    android:textSize="25dp"
                    android:textColor="#FFF"
                    android:fontFamily="casual"/>
                <EditText
                    android:id="@+id/login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginEnd="50dp"
                    android:textAlignment="center"
                    android:textColor="#FFF"
                    android:inputType="text"
                    android:backgroundTint="#FFF"
                    android:hint="@string/problemTitleHint"
                    android:textColorHint="#CCC"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_margin="20dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/problemDescription"
                    android:textSize="25dp"
                    android:textColor="#FFF"
                    android:fontFamily="casual"/>

                <EditText
                    android:id="@+id/description"
                    android:layout_width="300dp"
                    android:layout_height="150dp"
                    android:layout_marginStart="50dp"
                    android:layout_marginEnd="50dp"
                    android:background="@drawable/border_white"
                    android:textColor="#FFF"
                    android:textColorHint="#CCC"
                    android:hint="@string/problemDescriptionHint"
                    android:textAlignment="center" />
            </LinearLayout>

            <Spinner
                android:id="@+id/spinnerNiveau"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:layout_margin="20dp"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFF"
                android:background="@drawable/border_white"
                android:text="Poster"
                android:fontFamily="casual"
                android:layout_margin="5dp"/>


        </LinearLayout>
    </LinearLayout>
</LinearLayout>