<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".CreateAccount">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome_display"
                android:textAlignment="center"
                android:textColor="#FFF"
                android:textSize="30dp"
                android:fontFamily="casual"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_margin="30dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="TON LOGIN"
                    android:textSize="25dp"
                    android:textColor="#FFF"
                    android:fontFamily="casual"/>
                <EditText
                    android:id="@+id/login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginEnd="50dp"
                    android:textAlignment="center"
                    android:inputType="text"
                    android:backgroundTint="#FFF"
                    android:hint="@string/login"
                    android:textColorHint="#CCC"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_margin="30dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="TON MOT DE PASSE"
                    android:textSize="25dp"
                    android:textColor="#FFF"
                    android:fontFamily="casual"/>

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginEnd="50dp"
                    android:backgroundTint="#FFF"
                    android:inputType="textPassword"
                    android:hint="@string/password"
                    android:textColorHint="#CCC"
                    android:textAlignment="center" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_margin="30dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="CONFIRMATION"
                    android:textSize="25dp"
                    android:textColor="#FFF"
                    android:fontFamily="casual"/>

                <EditText
                    android:id="@+id/confirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginEnd="50dp"
                    android:backgroundTint="#FFF"
                    android:inputType="textPassword"
                    android:hint="@string/confirm"
                    android:textColorHint="#CCC"
                    android:textAlignment="center" />
            </LinearLayout>

            <Button
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:text="S'incrire"
                android:fontFamily="casual"
                android:background="@drawable/border_white"
                android:textColor="#FFF"
                android:textSize="20dp"
                android:onClick="onClick"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>